Archive2/4b/b4f00f1b5b463c/output
main.cpp:6:53: error: invalid operands to binary expression ('double' and 'double')
    template < typename U > U baz( U a ) { return a % 2 ; }
                                                  ~ ^ ~
main.cpp:21:27: note: in instantiation of function template specialization 'foo<int>::baz<double>' requested here
template double foo<int>::baz(double) ; // **** error: invalid type double in a % 2
                          ^
1 error generated.
---------
main.cpp: In instantiation of 'U foo<T>::baz(U) [with U = double; T = int]':
main.cpp:21:37:   required from here
main.cpp:6:53: error: invalid operands of types 'double' and 'int' to binary 'operator%'
     template < typename U > U baz( U a ) { return a % 2 ; }
                                                     ^
main.cpp: In member function 'U foo<T>::baz(U) [with U = double; T = int]':
main.cpp:6:59: warning: control reaches end of non-void function [-Wreturn-type]
     template < typename U > U baz( U a ) { return a % 2 ; }
                                                           ^
